--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,13 +10,11 @@ options:
     keyword:
       - '出售价格'
     slots: [ 10,11,12,13,14,15,16,19,20,21,22,23,24,25,26 ]
-    layout:
-      - '#########'
-      - '#iiiiiii#'
-      - '#iiiiiii#'
-      - '####s####'
-    template-#: 'sell-#'
-    template-s: 'sell-s'
+    template-s:
+      id: STONE
+      slots: [ 10 ]
+      lore:
+        - 点击回收
   condition:
     level:
       keyword:
