--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,9 @@ options:
   operator-add: '+'
   operator-take: '-'
   original: true
+  damage-cause:
+    - ENTITY_ATTACK
+    - ENTITY_SWEEP_ATTACK
   sell:
     title: '物品回收'
     keyword:
