--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,6 +8,7 @@ options:
   damage-cause:
     - ENTITY_ATTACK
     - ENTITY_SWEEP_ATTACK
+    - PROJECTILE
   sell:
     title: '物品回收'
     keyword:
