--- a/src/main/resources/item/default.yml
+++ b/src/main/resources/item/default.yml
@@ -21,4 +21,7 @@ def0:
   actions:
     - $e: on right air
       action:
-        - tell *"123"
+        - |-
+          if check inventory hand is "minecraft:*[lore=关键字]" then {
+            skillapi cast "skill"
+          }
