--- a/src/main/resources/attribute/Defence.yml
+++ b/src/main/resources/attribute/Defence.yml
@@ -1,28 +1,33 @@
 physical:
+  combat-power: 1.0
   keywords:
     - 物理防御
   correct:
     - [ 0,999999999999999 ]
     - [ 0,999999999999999 ]
 magic:
+  combat-power: 1.0
   keywords:
     - 魔法防御
   correct:
     - [ 0,999999999999999 ]
     - [ 0,999999999999999 ]
 pvpDamage:
+  combat-power: 1.0
   keywords:
     - PVP防御
   correct:
     - [ 0,999999999999999 ]
     - [ 0,999999999999999 ]
 pveDamage:
+  combat-power: 1.0
   keywords:
     - PVE防御
   correct:
     - [ 0,999999999999999 ]
     - [ 0,999999999999999 ]
 addon:
+  combat-power: 1.0
   keywords:
     - 防御力加成
   correct:
