--- a/src/main/resources/attribute/config.yml
+++ b/src/main/resources/attribute/config.yml
@@ -5,14 +5,10 @@ script:
     combat-power: 1.0
     keywords:
       - '真实伤害'
-
 damage-handler: |-
-  if(openAPI.hasLabel("@Crit")) {
-    openAPI.attacker.sendMessage('暴击' + openAPI.totalDamage)
-  } else {
-    openAPI.attacker.sendMessage('伤害' + openAPI.totalDamage)
-  }
 
-  if(openAPI.hasLabel("@SuckBlood")) {
-      openAPI.attacker.sendMessage('吸血' + openAPI.getLabel('suck-blood'))
+  if(openAPI.hasLabel("@Crit")) {
+    openAPI.attacker.sendTitle('','                 §c-§o' + openAPI.totalDamage,15,30,15)
+  } else {
+    openAPI.attacker.sendTitle('','                 §f§o-' + openAPI.totalDamage,15,30,15)
   }
