[ f ] Update default item configuration

--- a/src/main/resources/item/default.yml
+++ b/src/main/resources/item/default.yml
@@ -9,6 +9,9 @@ def0:
     - '强度值 {func:format({random:int:0-20})}'
     - ''
     - '&c来源: &f{papi:%player_name%def:0}'
+    - ''
+    - '{random:group:描述}'
+    - '{max:10,20,30}'
   item-flags:
     - HIDE_ENCHANTS
     - HIDE_ATTRIBUTES
@@ -16,21 +19,11 @@ def0:
     - HIDE_DESTROYS
     - HIDE_PLACED_ON
     - HIDE_POTION_EFFECTS
-  nbt:
-    max-durability: 100
-    attributes:
-      - '物理攻击: 100'
   actions:
     - $e: item consume
       action:
         - |-
           attribute add def0 5000 "攻击力 +10" they -"@self"
-
-proxy-def0:
-  g: proxy
-  id: def0
-  vars:
-    quality: 普通
 
 drop-table:
   g: group
