--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,7 +24,7 @@ options:
     - 'regex \[[0-9]+].*'
   sell:
     title: '物品回收'
-    keyword:
+    keywords:
       - '出售价格'
     slots: [ 10,11,12,13,14,15,16,19,20,21,22,23,24,25,26 ]
     template-s:
